<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/fondo"

    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/et_user"
        android:layout_width="248dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/user"
        android:inputType="text"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="248dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:textColor="@color/black"
        android:padding="10dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/log_in"
        app:cornerRadius="23dp"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/sing_in"
        app:layout_constraintStart_toStartOf="@+id/et_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <ImageView
        android:id="@+id/textView"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/wel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>